# chemrust

./: .gitignore  Cargo.toml  README.md  develop_notes.md
cell_reader/: Cargo.toml
cell_reader/src/: arg_parser.rs  main.rs
chemrust-cerius2-io/: Cargo.toml  README.md
chemrust-cerius2-io/src/: lib.rs
chemrust-core/: Cargo.toml
chemrust-core/src/: builder_state.rs  lib.rs
chemrust-core/src/data/: mod.rs
chemrust-core/src/data/atom/: atom_data.rs  atom_site.rs  attributes.rs  builder.rs  collection.rs  extra_keywords.rs  markers.rs  mod.rs
chemrust-core/src/data/atom/builder/: error.rs  mod.rs
chemrust-core/src/data/custom_data_type/: fractional_coord_range.rs  mod.rs
chemrust-core/src/data/format/: cell.rs  mod.rs  msi.rs
chemrust-core/src/data/geom/: coordinates.rs
chemrust-core/src/data/lattice/: lattice_vectors.rs  mod.rs  symmetry_lattice.rs
chemrust-core/src/data/lattice/cell_param/: mod.rs  reciprocal_cell.rs  unit_cell.rs
chemrust-core/src/data/lattice/crystal/: mod.rs
chemrust-core/src/data/lattice/reciprocal_lattice/: mod.rs
chemrust-core/src/data/lattice/reciprocal_lattice/mp_space/: mod.rs
chemrust-core/src/data/lattice/reciprocal_space/: kpoint.rs  mod.rs
chemrust-core/src/data/lattice/reciprocal_space/mp_space/: mod.rs
chemrust-core/src/data/param/: attributes.rs  markers.rs  mod.rs  model_params.rs
chemrust-core/src/data/param/kpoints/: helper_functions.rs  mod.rs
chemrust-core/src/data/symmetry/: mod.rs
chemrust-core/src/system/: mod.rs
chemrust-core/src/system/data_builder/: builder_state.rs  lattice_builder.rs  mod.rs  params_builder.rs
chemrust-core/src/system/data_builder/atoms_builder/: error.rs  mod.rs
chemrust-core/src/system/data_builder/params_builder/kpoints_generator/: helper_functions.rs  mod.rs  param_markers.rs  symmetry_reduction.rs
chemrust-core/src/system/data_view/: attributes.rs  collections.rs  mod.rs
chemrust-core/src/systems/: mod.rs
chemrust-core/src/systems/crystal_model/: mod.rs
chemrust-core/src/systems/file_formats/: mod.rs
chemrust-core/src/systems/file_formats/castep_cell/: mod.rs
chemrust-formats/: Cargo.toml
chemrust-formats/src/: lib.rs
chemrust-formats/src/castep_cell/: mod.rs
chemrust-formats/src/castep_cell/document_data/: mod.rs  positions_data.rs  units.rs
chemrust-formats/src/error/: mod.rs
chemrust-formats/src/param_writer/: castep_param.rs  kpoints.rs  mod.rs  ms_aux_files.rs  seed_writer.rs  settings.rs
chemrust-formats/src/param_writer/castep_param/: mod.rs
chemrust-formats/src/param_writer/castep_param/settings/: mod.rs
chemrust-formats/src/param_writer/castep_param/settings/electronic_minimizers/: mod.rs
chemrust-formats/src/param_writer/castep_param/tasks/: bandstructure.rs  geom_opt.rs  mod.rs
chemrust-formats/src/param_writer/cell_settings/: constraints.rs  external_fields.rs  kpoints.rs  mod.rs  species_characters.rs  symmetry_ops.rs
chemrust-formats/src/structure_files/: mod.rs
chemrust-formats/src/structure_files/cell/: mod.rs
chemrust-formats/src/structure_files/cell/castep_param/settings/electronic_minimizers/: density_mixing.rs
chemrust-formats/src/structure_files/cell/cell_param/: mod.rs
chemrust-formats/src/structure_files/cell/cell_param/settings/: exchange_functional.rs  mod.rs
chemrust-formats/src/structure_files/cell/cell_param/settings/electronic_minimizers/: mod.rs
chemrust-formats/src/structure_files/cell/cell_param/tasks/: bandstructure.rs  geom_opt.rs
chemrust-formats/src/structure_files/msi/: mod.rs
chemrust-misctools/: Cargo.toml
chemrust-misctools/src/: lib.rs
chemrust-misctools/src/server_utils/: mod.rs  script.rs
chemrust-parser/: Cargo.toml  SAC_GDY_V.cell  SAC_GDY_V.msi
chemrust-parser/src/: lib.rs
chemrust-parser/src/model_file/: mod.rs
chemrust-parser/src/model_file/cell_file_parser/: cell_parse_error.rs  mod.rs
chemrust-parser/src/model_file/msi_file_parser/: atom_parser.rs  helper.rs  mod.rs  model_attributes_parser.rs
chemrust-parser/src/parser_combos/: mod.rs
chemrust-scanner/: Cargo.toml  README.md
chemrust-scanner/src/: lib.rs
chemrust-scanner/src/analyzer/: mod.rs
chemrust-scanner/src/analyzer/algorithm/: intersect_check.rs  mod.rs
chemrust-scanner/src/analyzer/algorithm/coordination_sites/: mod.rs  visualize.rs
chemrust-scanner/src/analyzer/algorithm/local_bonding_env/: bonding_scheme.rs  builder.rs  local_mount_analyze.rs  mod.rs
chemrust-scanner/src/analyzer/algorithm/stages/: mod.rs
chemrust-scanner/src/analyzer/geometry/: mod.rs
chemrust-scanner/src/analyzer/geometry/intersections/: circles_intersection.rs  mod.rs  planes_intersection.rs  spheres_intersection.rs
chemrust-scanner/src/analyzer/geometry/primitives/: arc.rs  circle.rs  cone.rs  line.rs  mod.rs  plane.rs  sphere.rs
chemrust-scanner/src/analyzer/mounting_analyze/: mod.rs
chemrust-settings/: Cargo.toml
chemrust-settings/src/: lib.rs
chemrust-settings/src/kpoint_sampling/: helper_functions.rs  mod.rs
mount_scanner/: Cargo.toml  example_task.yaml
mount_scanner/src/: arg_parser.rs  main.rs
mount_scanner/src/execution/: mod.rs
mount_scanner/src/execution/run_modes/: mod.rs
mount_scanner/src/export_res/: mod.rs
mount_scanner/src/interactive_ui/: execute_modes.rs  export_options.rs  filepath_completer.rs  kpoint_quality.rs  mod.rs  run_options.rs
mount_scanner/src/yaml_parser/: mod.rs
