# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "mount_scanner",
    "cell_reader",
    "chemrust-core",
    "chemrust-parser",
    "chemrust-formats",
    "chemrust-scanner",
    "chemrust-settings"
]

[workspace.package]
name = "chemrust"
description = "The core module defining the flow and structs of data in computational chemistry routines."
authors = ["TonyWu20"]
readme = "README.md"
homepage = "https://github.com/TonyWu20/chemrust"
repository = "https://github.com/TonyWu20/chemrust"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [
    "chemistry",
    "computational_chemistry",
    "linear_algebra",
]


