# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "mount_scanner",
    "cell_reader",
    "chemrust-core",
    "chemrust-parser",
    "chemrust-formats",
    "chemrust-scanner",
    "chemrust-settings",
    "chemrust-misctools"
]

[workspace.package]
name = "chemrust"
description = "The core modules defining the flow and structs of data in computational chemistry routines."
authors = ["TonyWu20"]
readme = "README.md"
homepage = "https://github.com/TonyWu20/chemrust"
repository = "https://github.com/TonyWu20/chemrust"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = [
    "chemistry",
    "computational_chemistry",
    "linear_algebra",
]
resolver = "2"


