[package]
name = "cell_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = {path = "../chemrust-core"}
chemrust-parser = {path = "../chemrust-parser"}
clap = {version = "4", features = ["derive"]}
