[package]
name = "cell_reader"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = "0.2"
chemrust-parser = "0.2"
chemrust-formats = "0.2"
clap = {version = "4", features = ["derive"]}
