[package]
# name.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
# version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
version = "0.1.0"
readme = "README.md"

[dependencies]
