[package]
name = "chemrust-core"
edition.workspace = true
version = "0.3.0"
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.*", features=["debug", "compare"]}
castep-periodic-table = "0.5"
castep-cell-io = {git = "https://github.com/TonyWu20/castep-cell-io", branch = "dev"}

