[package]
name = "chemrust-core"
edition.workspace = true
version = "0.3.5"
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.*", features=["debug", "compare"]}
castep-periodic-table = "0.5.1"
crystallographic-group = "0.2.0"
