[package]
name = "chemrust-formats"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-periodic-table = "0.3"
chemrust-core = {path = "../chemrust-core"}
nalgebra = "0.32.5"
winnow = "0.6"
serde = "1.0"
