[package]
name = "chemrust-misctools"
description.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.*"
