[package]
name = "chemrust-scanner"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd-tree = {version="0.5.3", features=["nalgebra", "nalgebra-serde"]}
nalgebra = "0.32.2"
chemrust-core = "0.2"
chemrust-parser = "0.2"
itertools = "0.12"
castep-periodic-table = "0.2"
