[package]
name = "chemrust-settings"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
chemrust-core = {path = "../chemrust-core"}
crystallographic-group = { path = "../../crystallographic-group"}
