[package]
name = "mount_scanner"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = {path = "../chemrust-core"}
chemrust-parser = {path = "../chemrust-parser"}
chemrust-formats = {path = "../chemrust-formats"}
chemrust-scanner = {path = "../chemrust-scanner"}
castep-periodic-table = "0.2.2"
clap = {version = "4", features = ["derive"]}
glob = "0.3.1"
rayon = "1.7.0"
inquire = "0.6.2"
