[package]
name = "mount_scanner"
edition.workspace = true
version = "0.2.3"
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = "0.2"
chemrust-parser = "0.2"
chemrust-formats = "0.2"
chemrust-scanner = "0.2"
castep-periodic-table = "0.2.2"
clap = {version = "4", features = ["derive"]}
glob = "0.3.1"
rayon = "1.8.0"
inquire = "0.6.2"
serde_yaml = "0.9.25"
serde = { version = "1.*", features = ["derive"] }
